--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,17 +40,15 @@
 {% block content %}
 
 
-	<div class="container" style="min-height:100% ;width:80%">
-	{% with messages = get_flashed_messages() %}
-	  {% if messages %}
-	    {% for message in messages %}
-		  <div class="alert alert-warning alert-dismissible" role="alert">
-		  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-			{{message}}
-		  </div>
-		{% endfor %}
-	  {% endif %}
-	{% endwith %}
+	<div class="container" style="min-height:100% ;width:80%;margin-top :20px">
+	 {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+           <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert"> {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     </div>
 
     <div class="container bg-grey " style="border: 2px;margin-top :20px">
@@ -82,8 +80,18 @@
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
         </footer>
 {% endblock %}
+{% block scripts %}
 	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+ <script>
+$('.close').click(function(){
+    $("div.alert").hide();
+
+});
+
+</script>
+{% endblock %}
 
 </body>
 
